configure_file(
    output : 'proj_config.h',
    configuration : conf)

install_headers(
    'proj.h',
    'proj_api.h',
    'projects.h',
    'geodesic.h',
    'org_proj4_Projections.h',
    'org_proj4_PJ.h')

libproj = library('proj',
    'PJ_aea.c',
    'PJ_aeqd.c',
    'PJ_airy.c',
    'PJ_aitoff.c',
    'PJ_august.c',
    'PJ_axisswap.c',
    'PJ_bacon.c',
    'PJ_bipc.c',
    'PJ_boggs.c',
    'PJ_bonne.c',
    'PJ_calcofi.c',
    'PJ_cart.c',
    'PJ_cass.c',
    'PJ_cc.c',
    'PJ_cea.c',
    'PJ_chamb.c',
    'PJ_collg.c',
    'PJ_comill.c',
    'PJ_crast.c',
    'PJ_deformation.c',
    'PJ_denoy.c',
    'PJ_eck1.c',
    'PJ_eck2.c',
    'PJ_eck3.c',
    'PJ_eck4.c',
    'PJ_eck5.c',
    'PJ_eqc.c',
    'PJ_eqdc.c',
    'PJ_fahey.c',
    'PJ_fouc_s.c',
    'PJ_gall.c',
    'PJ_geos.c',
    'PJ_gins8.c',
    'PJ_gn_sinu.c',
    'PJ_gnom.c',
    'PJ_goode.c',
    'PJ_gstmerc.c',
    'PJ_hammer.c',
    'PJ_hatano.c',
    'PJ_healpix.c',
    'PJ_helmert.c',
    'PJ_hgridshift.c',
    'PJ_horner.c',
    'PJ_igh.c',
    'PJ_imw_p.c',
    'PJ_isea.c',
    'PJ_krovak.c',
    'PJ_labrd.c',
    'PJ_laea.c',
    'PJ_lagrng.c',
    'PJ_larr.c',
    'PJ_lask.c',
    'PJ_latlong.c',
    'PJ_lcc.c',
    'PJ_lcca.c',
    'PJ_loxim.c',
    'PJ_lsat.c',
    'PJ_mbt_fps.c',
    'PJ_mbtfpp.c',
    'PJ_mbtfpq.c',
    'PJ_merc.c',
    'PJ_mill.c',
    'PJ_misrsom.c',
    'PJ_mod_ster.c',
    'PJ_moll.c',
    'PJ_molodensky.c',
    'PJ_natearth.c',
    'PJ_natearth2.c',
    'PJ_nell.c',
    'PJ_nell_h.c',
    'PJ_nocol.c',
    'PJ_nsper.c',
    'PJ_nzmg.c',
    'PJ_ob_tran.c',
    'PJ_ocea.c',
    'PJ_oea.c',
    'PJ_omerc.c',
    'PJ_ortho.c',
    'PJ_patterson.c',
    'PJ_pipeline.c',
    'PJ_poly.c',
    'PJ_putp2.c',
    'PJ_putp3.c',
    'PJ_putp4p.c',
    'PJ_putp5.c',
    'PJ_putp6.c',
    'PJ_qsc.c',
    'PJ_robin.c',
    'PJ_rpoly.c',
    'PJ_sch.c',
    'PJ_sconics.c',
    'PJ_somerc.c',
    'PJ_stere.c',
    'PJ_sterea.c',
    'PJ_sts.c',
    'PJ_tcc.c',
    'PJ_tcea.c',
    'PJ_times.c',
    'PJ_tmerc.c',
    'PJ_tpeqd.c',
    'PJ_unitconvert.c',
    'PJ_urm5.c',
    'PJ_urmfps.c',
    'PJ_vandg.c',
    'PJ_vandg2.c',
    'PJ_vandg4.c',
    'PJ_vgridshift.c',
    'PJ_wag2.c',
    'PJ_wag3.c',
    'PJ_wag7.c',
    'PJ_wink1.c',
    'PJ_wink2.c',
    'aasincos.c',
    'adjlon.c',
    'bch2bps.c',
    'bchgen.c',
    'biveval.c',
    'dmstor.c',
    'emess.c',
    'emess.h',
    'geocent.c',
    'geocent.h',
    'geodesic.c',
    'jniproj.c',
    'mk_cheby.c',
    'nad_cvt.c',
    'nad_init.c',
    'nad_intr.c',
    'pj_apply_gridshift.c',
    'pj_apply_vgridshift.c',
    'pj_auth.c',
    'pj_ctx.c',
    'pj_datum_set.c',
    'pj_datums.c',
    'pj_deriv.c',
    'pj_ell_set.c',
    'pj_ellps.c',
    'pj_errno.c',
    'pj_factors.c',
    'pj_fileapi.c',
    'pj_fwd.c',
    'pj_fwd3d.c',
    'pj_gauss.c',
    'pj_gc_reader.c',
    'pj_generic_selftest.c',
    'pj_geocent.c',
    'pj_gridcatalog.c',
    'pj_gridinfo.c',
    'pj_gridlist.c',
    'pj_init.c',
    'pj_initcache.c',
    'pj_internal.c',
    'pj_inv.c',
    'pj_inv3d.c',
    'pj_list.c',
    'pj_list.h',
    'pj_log.c',
    'pj_malloc.c',
    'pj_mlfn.c',
    'pj_msfn.c',
    'pj_mutex.c',
    'pj_open_lib.c',
    'pj_param.c',
    'pj_phi2.c',
    'pj_pr_list.c',
    'pj_qsfn.c',
    'pj_release.c',
    'pj_run_selftests.c',
    'pj_strerrno.c',
    'pj_strtod.c',
    'pj_transform.c',
    'pj_tsfn.c',
    'pj_units.c',
    'pj_utils.c',
    'pj_zpoly1.c',
    'proj_4D_api.c',
    'proj_etmerc.c',
    'proj_internal.h',
    'proj_mdist.c',
    'proj_rouss.c',
    'rtodms.c',
    'vector1.c',
    version : '12.0.0',
    c_args : ['-DPROJ_LIB="@0@"'.format(pkgdatadir),
              '-DMUTEX_@0@'.format(MUTEX_SETTING)],
    dependencies : [JNI, THREADS, LIBM],
    install : true,
)

proj = executable('proj',
    'proj.c',
    'gen_cheb.c',
    'p_series.c',
    link_with : libproj,
    dependencies : LIBM,
    install : true)

cs2cs = executable('cs2cs',
    'cs2cs.c',
    'gen_cheb.c',
    'p_series.c',
    link_with : libproj,
    dependencies : LIBM,
    install : true)

cct = executable('cct',
    'cct.c',
    'proj_strtod.c',
    'optargpm.h',
    link_with : libproj,
    dependencies : LIBM,
    install : true)

nad2bin = executable('nad2bin',
    'nad2bin.c',
    link_with : libproj,
    install : true)

geod = executable('geod',
    'geod.c',
    'geod_set.c',
    'geod_interface.c',
    'geod_interface.h',
    link_with : libproj,
    dependencies : LIBM,
    install : true)

gie = executable('gie',
    'gie.c',
    'proj_strtod.c',
    'optargpm.h',
    link_with : libproj,
    dependencies : LIBM,
    install : true)

multistresstest = executable('multistresstest',
    'multistresstest.c',
    link_with : libproj,
    dependencies : THREADS)
test('multistresstest', multistresstest)

test228 = executable('test228',
    'test228.c',
    link_with : libproj,
    dependencies : THREADS)
test('test228', test228)

geodtest = executable('geodtest',
    'geodtest.c',
    link_with : libproj,
    dependencies : LIBM)
test('geodtest', geodtest)
